<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtName"
        style="@style/textBox"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:inputType="textCapSentences"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/textBox"
        android:layout_width="match_parent"
        android:hint="@string/phone"
        android:paddingStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        android:textSize="18sp"
        android:inputType="phone"/>

    <RadioGroup
        android:id="@+id/rdgDataType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        app:layout_constraintVertical_bias="1.5"
        >

        <RadioButton
            android:id="@+id/rdPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/personal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdProfessional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/professional"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtDataType"
        style="@style/textBoxSearch"
        android:layout_marginTop="50dp"
        android:hint="@string/reference"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/rdgDataType" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDataType"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
